# agro

./: README.md  pyproject.toml
evently/evently/: settings.py  urls.py
evently/events/: geocoder.py  models.py  serializers.py  urls.py  views.py
evently/events/migrations/: 0001_initial.py  0002_alter_event_attendees_alter_event_organizers.py  0003_event_location.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/events/: events-list.tsx  page.tsx
frontend/src/app/events/[id]/: event-details.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: error.tsx  event-card.tsx  loading.tsx  map-handlers.tsx  redirect.tsx
frontend/src/components/layouts/: base.tsx
frontend/src/lib/: storage.ts  types.ts
frontend/src/lib/backend/: auth.ts  common.ts  events.ts
